--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -503,18 +503,20 @@
                                                     <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.FormToInspectionCategoryMappingData.dataSet" navigation="Classic" name="gridFormtoinspectioncategorymapp" filtermode="multicolumn"
                                                     exportformat="EXCEL" showrecordcount="true">
                                                         <wm-grid-column binding="inspectionCategories.inspectionCategory" caption="Inspection Category" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="InspectionCategories"></wm-grid-column>
-                                                        <wm-grid-column binding="addedAt" caption="Added At" type="timestamp" primary-key="false" generator="assigned" edit-widget-type="timestamp" show="true" filterwidget="text" readonly="false"></wm-grid-column>
+                                                        <wm-grid-column binding="addedAt" caption="Date Added" type="datetime" primary-key="false" generator="assigned" datepattern="MM-dd-yyyy" formatpattern="toDate" edit-widget-type="timestamp"
+                                                        show="true" filterwidget="date" readonly="false"></wm-grid-column>
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                        <wm-grid-action key="addNewRow" display-name="New" show="true" class="btn-primary" iconclass="wi wi-plus" title="New" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                        <wm-grid-action key="addNewRow" display-name="Add Category" show="true" class="btn-primary" iconclass="wi wi-plus" title="Add Category" action="addNewRow()" shortcutkey="" disabled="false"></wm-grid-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
                                                     </wm-grid>
-                                                    <wm-liveform novalidate="false" errormessage="" title="Add Category" formlayout="dialog" iconclass="wi wi-edit" dataset="bind:Variables.FormToInspectionCategoryMappingData.dataSet" captionalign="left"
+                                                    <wm-liveform novalidate="false" errormessage="" title="Add Inspection Category" formlayout="dialog" iconclass="wi wi-group-work" dataset="bind:Variables.FormToInspectionCategoryMappingData.dataSet" captionalign="left"
                                                     captionposition="top" name="liveformFormtoinspectioncategory">
                                                         <wm-layoutgrid columns="1" name="layoutgrid18">
                                                             <wm-gridrow name="gridrow71">
                                                                 <wm-gridcolumn columnwidth="12" name="gridcolumn102">
-                                                                    <wm-form-field name="inspectionCategories" displayname="Inspection Categories" show="true" primary-key="false" generator="assigned" key="inspectionCategories" type="list" is-related="true"
-                                                                    readonly="false" required="true" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentMunicipalityInspectionCategories.dataSet" datafield="All Fields" displayfield="inspectionCategory"></wm-form-field>
+                                                                    <wm-form-field name="inspectionCategories" displayname="What inspection category would you like to assign to this form?" show="true" primary-key="false" generator="assigned" key="inspectionCategories"
+                                                                    type="list" is-related="true" readonly="false" required="true" widget="select" placeholder="Select value" dataset="bind:Variables.CurrentMunicipalityInspectionCategories.dataSet" datafield="All Fields"
+                                                                    displayfield="inspectionCategory"></wm-form-field>
                                                                 </wm-gridcolumn>
                                                             </wm-gridrow>
                                                             <wm-gridrow name="gridrow72">
@@ -527,9 +529,9 @@
                                                         placeholder="Enter value"></wm-form-field>
                                                         <wm-form-field name="formTypes" displayname="Form Types" show="false" primary-key="false" generator="assigned" key="formTypes" type="list" is-related="true" readonly="false" required="false"
                                                         widget="select" placeholder="Select value" dataset="bind:Variables.CurrentFormObj.dataSet" datafield="All Fields" displayfield="formType" defaultvalue="bind:Variables.CurrentFormObj.firstRecord"></wm-form-field>
+                                                        <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                                         <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button"
                                                         update-mode="true"></wm-form-action>
-                                                        <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                                                     </wm-liveform>
                                                 </wm-livegrid>
                                             </wm-panel>
