--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -83,14 +83,11 @@
                                         <wm-label class="col-md-3 form-control-static" name="label8" caption="Municipality Search" width="20%" fontweight="bold"></wm-label>
                                         <wm-container class="col-md-9" name="container5" width="80%">
                                             <wm-search name="textSearchMunicipalities" placeholder="Search by Municipality Name" dataset="bind:Variables.GetMunicipalities.dataSet" searchkey="municipalityName" displaylabel="municipalityName" displayimagesrc="logo"
-                                            datafield="All Fields" on-submit="textSearchMunicipalitiesSubmit($event, $scope)" required="false" width="100%" type="autocomplete" orderby="municipalityName:asc"></wm-search>
+                                            datafield="All Fields" required="false" width="100%" type="autocomplete" orderby="municipalityName:asc" on-select="textSearchMunicipalitiesSelect($event, $scope, selectedValue)"></wm-search>
                                         </wm-container>
                                     </wm-composite>
                                 </wm-gridcolumn>
-                                <wm-gridcolumn columnwidth="3" name="gridcolumn24" horizontalalign="left">
-                                    <wm-button class="btn-primary" caption="Add Municipality" type="button" margin="unset 0.5em" name="ButtonAddMuncipalities" iconclass="wi wi-plus" on-click="ButtonAddMuncipalitiesClick($event, $scope)" horizontalalign="left"
-                                    disabled="bind:!Widgets.textSearchMunicipalities.datavalue"></wm-button>
-                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="3" name="gridcolumn24" horizontalalign="left"></wm-gridcolumn>
                             </wm-gridrow>
                             <wm-gridrow name="gridrow14" padding="2px unset unset unset">
                                 <wm-gridcolumn columnwidth="2" name="gridcolumn31">
@@ -160,36 +157,43 @@
                                     <wm-composite name="composite3" required="false">
                                         <wm-label class="col-md-3 form-control-static" name="label5" caption="Create Password" fontweight="bold" width="120px"></wm-label>
                                         <wm-container class="col-md-9" name="container3" width="300px">
-                                            <wm-text name="textPwd" placeholder="Enter Password" type="password" regexp=".*" required="true" on-keyup="textPwdKeyup($event, $scope)" updateon="blur" on-keydown="textPwdKeydown($event, $scope)"></wm-text>
+                                            <wm-text name="textPwd" placeholder="Enter Password" type="password" regexp=".*" required="true" updateon="default" updatedelay="300" on-change="textPwdChange($event, $scope, newVal, oldVal)" autocomplete="false"></wm-text>
                                         </wm-container>
+                                        <wm-label padding="unset 0.5em" name="label12_2" show="bind:pwordRequirementsMet === false" caption="<i class=&quot;fa fa-warning&quot;></i> Password requirements have not been met. Please choose a strong password."
+                                        color="#9b8a38"></wm-label>
                                     </wm-composite>
                                 </wm-gridcolumn>
                             </wm-gridrow>
-                            <wm-gridrow name="gridrow17" padding="unset unset 2em unset">
+                            <wm-gridrow name="gridrow17">
                                 <wm-gridcolumn columnwidth="12" name="gridcolumn27">
-                                    <wm-composite name="composite4" required="false">
+                                    <wm-composite name="composite4" show="true" required="false">
                                         <wm-label class="col-md-3 form-control-static" name="label6" caption="Confirm Password" fontweight="bold" width="120px"></wm-label>
                                         <wm-container class="col-md-9" name="container4" width="300px">
-                                            <wm-text name="textRePwd" placeholder="Enter Password" on-keyup="textRePwdKeyup($event, $scope)" type="password" required="true" regexp=".*" updateon="blur"></wm-text>
+                                            <wm-text name="textRePwd" placeholder="Enter Password" on-keyup="textRePwdKeyup($event, $scope)" type="password" required="true" regexp=".*" updateon="default" updatedelay="300" autocomplete="false" on-change="textRePwdChange($event, $scope, newVal, oldVal)"></wm-text>
                                         </wm-container>
+                                        <wm-label padding="unset 0.5em" name="label13_1" caption="<i class=&quot;fa fa-warning&quot;></i> Passwords don't match." show="bind:passwordsDontMatch === true" color="#9b8a38"></wm-label>
                                     </wm-composite>
-                                </wm-gridcolumn>
-                            </wm-gridrow>
-                            <wm-gridrow name="gridrow21_2">
-                                <wm-gridcolumn columnwidth="12" name="gridcolumn30_1">
-                                    <wm-composite name="composite6_1">
-                                        <wm-checkbox caption="bind:'By signing up for an account on CivicXpress, I acknowledge that I have read and accepted the <a href=&quot;&quot; class=&quot;eulaLink&quot;>End User License Agreement</a>'" class="col-md-9"
-                                        name="checkboxAcceptEULA" required="true"></wm-checkbox>
-                                    </wm-composite>
-                                </wm-gridcolumn>
-                            </wm-gridrow>
-                            <wm-gridrow name="gridrow19" padding="2em unset unset unset">
-                                <wm-gridcolumn columnwidth="12" name="gridcolumn29_1" horizontalalign="left">
-                                    <wm-prefab prefabname="Google_reCAPTCHA" name="Google_reCAPTCHA1" sitekey="6LcNeBUUAAAAAE7ACQkzLMRlZ4kHI9-ebthTlQ61"></wm-prefab>
                                 </wm-gridcolumn>
                             </wm-gridrow>
                         </wm-layoutgrid>
                     </wm-panel>
+                    <wm-panel iconclass="fa fa-legal" autoclose="outsideClick" name="panel5" title="License Agreement">
+                        <wm-layoutgrid name="layoutgrid7">
+                            <wm-gridrow name="gridrow23">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn32">
+                                    <wm-checkbox caption="bind:'By signing up for an account on CivicXpress, I acknowledge that I have read and accepted the <a href=&quot;&quot; class=&quot;eulaLink&quot;>End User License Agreement</a>'" class="col-md-9"
+                                    name="checkboxAcceptEULA" required="true"></wm-checkbox>
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                        </wm-layoutgrid>
+                    </wm-panel>
+                    <wm-layoutgrid name="layoutgrid8">
+                        <wm-gridrow name="gridrow25">
+                            <wm-gridcolumn columnwidth="12" name="gridcolumn36" padding="unset unset unset 1em">
+                                <wm-prefab prefabname="Google_reCAPTCHA" name="Google_reCAPTCHA1" sitekey="6LcNeBUUAAAAAE7ACQkzLMRlZ4kHI9-ebthTlQ61"></wm-prefab>
+                            </wm-gridcolumn>
+                        </wm-gridrow>
+                    </wm-layoutgrid>
                 </wm-wizardstep>
             </wm-wizard>
         </wm-page-content>
